--- a/session7/complete/session7.ipynb
+++ b/session7/complete/session7.ipynb
@@ -31,6 +31,7 @@
     "    GetHeadersMessage,\n",
     "    HeadersMessage,\n",
     "    SimpleNode,\n",
+    "    VerAckMessage,\n",
     "    VersionMessage,\n",
     "    BLOCK_DATA_TYPE,\n",
     ")\n",
@@ -206,7 +207,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
+      "Ran 1 test in 0.000s\n",
       "\n",
       "OK\n"
      ]
@@ -228,11 +229,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sending: version: 7f110100000000000000000032e1e95b00000000000000000000000000000000000000000000ffff000000008d20000000000000000000000000000000000000ffff000000008d20c26083c5b59f50881b2f70726f6772616d6d696e67626c6f636b636861696e3a302e312f0000000001\n",
-      "receiving: version: 7f1101000d0400000000000032e1e95b00000000000000000000000000000000000000000000ffff4830fd33ddff0d040000000000000000000000000000000000000000000000001587f2d35309372e102f5361746f7368693a302e31372e302f6005160001\n",
+      "sending: version: 7f11010000000000000000002bd3f05b00000000000000000000000000000000000000000000ffff000000008d20000000000000000000000000000000000000ffff000000008d204dd36c3c1ce7238c1b2f70726f6772616d6d696e67626c6f636b636861696e3a302e312f0000000001\n",
+      "receiving: version: 7f1101000d040000000000002cd3f05b00000000000000000000000000000000000000000000ffff4830fd33fb7b0d04000000000000000000000000000000000000000000000000d34f4fb4abc9e6d0102f5361746f7368693a302e31372e302f3a08160001\n",
       "sending: verack: \n",
       "receiving: verack: \n",
-      "verack: \n"
+      "<network.VerAckMessage object at 0x7fe57c0b6550>\n"
      ]
     }
    ],
@@ -244,8 +245,8 @@
     "node = SimpleNode('tbtc.programmingblockchain.com', testnet=True, logging=True)\n",
     "\n",
     "version = VersionMessage()\n",
-    "node.send(version.command, version.serialize())\n",
-    "print(node.wait_for_commands([b'verack']))"
+    "node.send(version)\n",
+    "print(node.wait_for(VerAckMessage))"
    ]
   },
   {
@@ -271,7 +272,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.087s\n",
+      "Ran 1 test in 0.088s\n",
       "\n",
       "OK\n"
      ]
@@ -326,18 +327,17 @@
     "count = 1\n",
     "for _ in range(20):\n",
     "    getheaders = GetHeadersMessage(start_block=last_block_hash)\n",
-    "    node.send(getheaders.command, getheaders.serialize())\n",
-    "    headers_envelope = node.wait_for_commands([b'headers'])\n",
-    "    headers_message = HeadersMessage.parse(headers_envelope.stream())\n",
-    "    for b in headers_message.blocks:\n",
-    "        if not b.check_pow():\n",
+    "    node.send(getheaders)\n",
+    "    headers = node.wait_for(HeadersMessage)\n",
+    "    for header in headers.headers:\n",
+    "        if not header.check_pow():\n",
     "            raise RuntimeError('bad proof of work at block {}'.format(count))\n",
-    "        if last_block_hash != GENESIS_BLOCK_HASH and b.prev_block != last_block_hash:\n",
+    "        if last_block_hash != GENESIS_BLOCK_HASH and header.prev_block != last_block_hash:\n",
     "            raise RuntimeError('discontinuous block at {}'.format(count))\n",
     "        count += 1\n",
-    "        last_block_hash = b.hash()\n",
+    "        last_block_hash = header.hash()\n",
     "        if count % 2016 == 0:\n",
-    "            print(b.id())"
+    "            print(header.id())"
    ]
   },
   {
@@ -395,27 +395,25 @@
     "while count <= 40000:\n",
     "    # create a GetHeadersMessage starting from the last block we have\n",
     "    getheaders = GetHeadersMessage(start_block=last_block_hash)\n",
-    "    # send the getheaders command\n",
-    "    node.send(getheaders.command, getheaders.serialize())\n",
-    "    # wait for the headers command in response\n",
-    "    headers_envelope = node.wait_for_commands([b'headers'])\n",
-    "    # parse the network envelope that comes back\n",
-    "    headers_message = HeadersMessage.parse(headers_envelope.stream())\n",
-    "    # loop through the blocks from the headers message\n",
-    "    for b in headers_message.blocks:\n",
+    "    # send the getheaders message\n",
+    "    node.send(getheaders)\n",
+    "    # wait for the HeadersMessage in response\n",
+    "    headers = node.wait_for(HeadersMessage)\n",
+    "    # loop through the headers from the headers message\n",
+    "    for header in headers.headers:\n",
     "        # check the proof of work\n",
-    "        if not b.check_pow():\n",
+    "        if not header.check_pow():\n",
     "            raise RuntimeError('bad proof of work at block {}'.format(count))\n",
     "        # the prev_block of the current block should be the last block\n",
-    "        if last_block_hash != TESTNET_GENESIS_BLOCK_HASH and b.prev_block != last_block_hash:\n",
+    "        if last_block_hash != TESTNET_GENESIS_BLOCK_HASH and header.prev_block != last_block_hash:\n",
     "            raise RuntimeError('discontinuous block at {}'.format(count))\n",
     "        # increment the block count\n",
     "        count += 1\n",
     "        # set the last block hash\n",
-    "        last_block_hash = b.hash()\n",
-    "        # print the block header every 2016 blocks (difficulty adjustment)\n",
+    "        last_block_hash = header.hash()\n",
+    "        # print the id every 2016 blocks (difficulty adjustment)\n",
     "        if count % 2016 == 0:\n",
-    "            print(b.id())"
+    "            print(header.id())"
    ]
   },
   {
@@ -937,31 +935,14 @@
     "getdata = GetDataMessage()\n",
     "# add_data on the message (BLOCK_DATA_TYPE, block_hash)\n",
     "getdata.add_data(BLOCK_DATA_TYPE, block_hash)\n",
-    "# send the getdata command\n",
-    "node.send(getdata.command, getdata.serialize())\n",
+    "# send the getdata message\n",
+    "node.send(getdata)\n",
     "\n",
-    "# wait for the block command in response\n",
-    "block_envelope = node.wait_for_commands([b'block'])\n",
-    "# get the stream from the envelope\n",
-    "stream = block_envelope.stream()\n",
-    "# block message is block header first, so parse a Block\n",
-    "b = Block.parse(stream)\n",
+    "# wait for the block message in response\n",
+    "b = node.wait_for(Block)\n",
     "# check the proof of work\n",
     "if not b.check_pow():\n",
     "    raise RuntimeError('bad proof of work')\n",
-    "# next the block message has the number of transactions so read_varint that\n",
-    "num_txs = read_varint(stream)\n",
-    "# initialize the tx_hashes list\n",
-    "tx_hashes = []\n",
-    "# loop through that number of times\n",
-    "for _ in range(num_txs):\n",
-    "    # parse the transaction\n",
-    "    t = Tx.parse(stream)\n",
-    "    # add the transaction hash to the tx_hashes list\n",
-    "    tx_hashes.append(t.hash())\n",
-    "\n",
-    "# set the block's tx_hashes to the ones we've gathered\n",
-    "b.tx_hashes = tx_hashes\n",
     "# validate the tx_hashes\n",
     "if not b.validate_merkle_root():\n",
     "    raise RuntimeError('bad merkle root')\n",
