--- a/session7/session7.ipynb
+++ b/session7/session7.ipynb
@@ -31,6 +31,7 @@
     "    GetHeadersMessage,\n",
     "    HeadersMessage,\n",
     "    SimpleNode,\n",
+    "    VerAckMessage,\n",
     "    VersionMessage,\n",
     "    BLOCK_DATA_TYPE,\n",
     ")\n",
@@ -165,8 +166,8 @@
     "node = SimpleNode('tbtc.programmingblockchain.com', testnet=True, logging=True)\n",
     "\n",
     "version = VersionMessage()\n",
-    "node.send(version.command, version.serialize())\n",
-    "print(node.wait_for_commands([b'verack']))"
+    "node.send(version)\n",
+    "print(node.wait_for(VerAckMessage))"
    ]
   },
   {
@@ -209,18 +210,17 @@
     "count = 1\n",
     "for _ in range(20):\n",
     "    getheaders = GetHeadersMessage(start_block=last_block_hash)\n",
-    "    node.send(getheaders.command, getheaders.serialize())\n",
-    "    headers_envelope = node.wait_for_commands([b'headers'])\n",
-    "    headers_message = HeadersMessage.parse(headers_envelope.stream())\n",
-    "    for b in headers_message.blocks:\n",
-    "        if not b.check_pow():\n",
+    "    node.send(getheaders)\n",
+    "    headers = node.wait_for(HeadersMessage)\n",
+    "    for header in headers.headers:\n",
+    "        if not header.check_pow():\n",
     "            raise RuntimeError('bad proof of work at block {}'.format(count))\n",
-    "        if last_block_hash != GENESIS_BLOCK_HASH and b.prev_block != last_block_hash:\n",
+    "        if last_block_hash != GENESIS_BLOCK_HASH and header.prev_block != last_block_hash:\n",
     "            raise RuntimeError('discontinuous block at {}'.format(count))\n",
     "        count += 1\n",
-    "        last_block_hash = b.hash()\n",
+    "        last_block_hash = header.hash()\n",
     "        if count % 2016 == 0:\n",
-    "            print(b.id())"
+    "            print(header.id())"
    ]
   },
   {
@@ -246,15 +246,14 @@
     "# set the block count to 1\n",
     "# loop until we we get 40,000 blocks\n",
     "    # create a GetHeadersMessage starting from the last block we have\n",
-    "    # send the getheaders command\n",
-    "    # wait for the headers command in response\n",
-    "    # parse the network envelope that comes back\n",
-    "    # loop through the blocks from the headers message\n",
+    "    # send the getheaders message\n",
+    "    # wait for the HeadersMessage in response\n",
+    "    # loop through the headers from the headers message\n",
     "        # check the proof of work\n",
     "        # the prev_block of the current block should be the last block\n",
     "        # increment the block count\n",
     "        # set the last block hash\n",
-    "        # print the block header every 2016 blocks (difficulty adjustment)"
+    "        # print the id every 2016 blocks (difficulty adjustment)"
    ]
   },
   {
@@ -628,21 +627,18 @@
     "\n",
     "# create a GetDataMessage\n",
     "# add_data on the message (BLOCK_DATA_TYPE, block_hash)\n",
-    "# send the getdata command\n",
+    "# send the getdata message\n",
     "\n",
-    "# wait for the block command in response\n",
-    "# get the stream from the envelope\n",
-    "# block message is block header first, so parse a Block\n",
+    "# wait for the block message in response\n",
+    "b = node.wait_for(Block)\n",
     "# check the proof of work\n",
-    "# next the block message has the number of transactions so read_varint that\n",
-    "# initialize the tx_hashes list\n",
-    "# loop through that number of times\n",
-    "    # parse the transaction\n",
-    "    # add the transaction hash to the tx_hashes list\n",
-    "\n",
-    "# set the block's tx_hashes to the ones we've gathered\n",
+    "if not b.check_pow():\n",
+    "    raise RuntimeError('bad proof of work')\n",
     "# validate the tx_hashes\n",
-    "# print the merkle root hex"
+    "if not b.validate_merkle_root():\n",
+    "    raise RuntimeError('bad merkle root')\n",
+    "# print the merkle root hex\n",
+    "print(b.merkle_root.hex())"
    ]
   },
   {
