--- a/session8/session8.ipynb
+++ b/session8/session8.ipynb
@@ -193,6 +193,10 @@
     "\n",
     "#### 2.1. Make [this test](/edit/session8/bloomfilter.py) pass.\n",
     "\n",
+    "```\n",
+    "bloomfilter.py:BloomFilterTest:test_filterload\n",
+    "```\n",
+    "\n",
     "#### 2.2. Do the following:\n",
     "\n",
     "* Connect to a testnet node\n",
@@ -223,8 +227,8 @@
     "\n",
     "from bloomfilter import BloomFilter\n",
     "\n",
-    "block_hash = bytes.fromhex('<fill this in>')\n",
-    "passphrase = b'<fill this in>'  # FILL THIS IN\n",
+    "block_hash = bytes.fromhex('')  # FILL THIS IN\n",
+    "passphrase = b''  # FILL THIS IN\n",
     "secret = little_endian_to_int(hash256(passphrase))\n",
     "private_key = PrivateKey(secret=secret)\n",
     "addr = private_key.point.address(testnet=True)\n",
@@ -239,7 +243,7 @@
     "\n",
     "# connect to tbtc.programmingblockchain.com in testnet mode, logging True\n",
     "# complete the handshake\n",
-    "# send the filterload command with bf.filterload() as the payload\n",
+    "# send the filterload message\n",
     "# create a getdata message\n",
     "# add_data (FILTERED_BLOCK_DATA_TYPE, block_hash) to request the block\n",
     "# send the getdata message\n",
@@ -290,9 +294,9 @@
     "\n",
     "from merkleblock import MerkleBlock, MerkleTree\n",
     "\n",
-    "last_block_hex = '<fill this in>'\n",
+    "last_block_hex = ''  # FILL THIS IN\n",
     "last_block = bytes.fromhex(last_block_hex)\n",
-    "passphrase = b'<fill this in>'  # FILL THIS IN\n",
+    "passphrase = b''  # FILL THIS IN\n",
     "secret = little_endian_to_int(hash256(passphrase))\n",
     "private_key = PrivateKey(secret=secret)\n",
     "addr = private_key.point.address(testnet=True)\n",
@@ -310,33 +314,29 @@
     "# create a bloom filter using variables above\n",
     "# add the h160 to the bloom filter\n",
     "# complete the handshake\n",
-    "# send the 'filterload' command with bf.filterload() as the payload\n",
+    "# send the 'filterload' message\n",
     "\n",
     "# create GetHeadersMessage with the last_block as the start_block\n",
     "# send a getheaders message\n",
     "\n",
     "# wait for the headers message\n",
-    "# get the stream from the headers\n",
-    "# parse the headers message\n",
     "\n",
     "# initialize the GetDataMessage\n",
-    "# loop through the blocks in the headers message\n",
+    "# loop through the headers in the headers message\n",
     "    # check that the proof of work on the block is valid\n",
     "    # check that this block's prev_block is the last block\n",
     "    # set the last block to the current hash\n",
     "    # add_data(FILTERED_BLOCK_DATA_TYPE, last_block) to get_data_message\n",
-    "# send the get_data_message\n",
+    "# send the getdata message\n",
     "\n",
     "# initialize prev_tx to None\n",
     "# while prev_tx is None \n",
     "    # wait for the merkleblock or tx commands\n",
-    "    # initialize the stream from the envelope\n",
     "    # if we have the merkleblock command\n",
-    "        # parse the MerkleBlock\n",
     "        # check that the MerkleBlock is valid\n",
     "    # else we have the tx command\n",
-    "        # parse the tx (prev)\n",
-    "        # loop through the enumerated tx outs (enumerate(prev.tx_outs))\n",
+    "        # set message.testnet=True\n",
+    "        # loop through the enumerated tx outs (enumerate(message.tx_outs))\n",
     "            # if our output has the same address as our address (addr) we found it\n",
     "                # we found our utxo. set prev_tx, prev_index, prev_amount\n",
     "                # break\n",
@@ -353,10 +353,7 @@
     "# add_data (TX_DATA_TYPE, tx_obj.hash()) to get data message\n",
     "# send the GetDataMessage\n",
     "# now wait for a response\n",
-    "# if we have the tx command\n",
-    "    # parse the tx\n",
-    "    # check that the ids are the same\n",
-    "        # yes! we got to what we wanted"
+    "    # yes! we got to what we wanted"
    ]
   }
  ],
