fixed testnet genesis

--- a/session8/complete/distribute.ipynb
+++ b/session8/complete/distribute.ipynb
@@ -187,6 +187,299 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "0xd20a8b8b4d25086d71f03358d26d8564fc199aefd2a0239c49e9ab4c93a7025e\n",
+      "04678afdb0fe5548271967f1a67130b7105cd6a828e03909a67962e0ea1f61deb649f6bc3f4cef38c4f35504e51ec112de5c384df7ba0b8d578a4c702b6bf11d5f\n",
+      "3046022100d20a8b8b4d25086d71f03358d26d8564fc199aefd2a0239c49e9ab4c93a7025e022100d20a8b8b4d25086d71f03358d26d8564fc199aefd2a0239c49e9ab4c93a7025e\n"
+     ]
+    }
+   ],
+   "source": [
+    "from ecc import S256Point, Signature, G, N\n",
+    "from random import randint\n",
+    "\n",
+    "point = S256Point.parse(bytes.fromhex('04678afdb0fe5548271967f1a67130b7105cd6a828e03909a67962e0ea1f61deb649f6bc3f4cef38c4f35504e51ec112de5c384df7ba0b8d578a4c702b6bf11d5f'))\n",
+    "\n",
+    "u = 1\n",
+    "v = 1\n",
+    "r = (u*G+v*point).x.num % N\n",
+    "s = r * pow(v, N-2, N) % N\n",
+    "z = u * s % N\n",
+    "\n",
+    "sig = Signature(r,s)\n",
+    "print(point.verify(z, sig))\n",
+    "print(hex(z))\n",
+    "print(point.sec(compressed=False).hex())\n",
+    "print(sig.der().hex())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2e1d1cc2a4ca52c6f6178570da8375365bc06416b898eb9436f328a4eb72d22d\n"
+     ]
+    }
+   ],
+   "source": [
+    "from helper import hash256\n",
+    "\n",
+    "print(hash256(b'The Times 19/11/2018 The ups and downs of Downing Street').hex())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "0xcdfa8e0aa397127e5fd4757d9fa63f7b45c6c4eac21fc4938ca23fddb6a3b39d\n"
+     ]
+    }
+   ],
+   "source": [
+    "M = 0xc8b0ce42f46f4ec0517fcd68f56776123031e00cd6f67625f93ddef0d96a3313\n",
+    "R = 0xd87d8097c920245f037f2a134ad2eb1e551aa1a3d7cb5a3e38f7353890f46d38\n",
+    "S = 0x27827f6836dfdba0fc80d5ecb52d14e065943b42d77d45fd86db29543f41d409\n",
+    "X = 0x11db93e1dcdb8a016b49840f8c53bc1eb68a382e97b1482ecad7b148a6909a5c\n",
+    "Y = 0xb2e0eaddfb84ccf9744464f82e160bfa9b8b64f9d4c03f999b8643f656b412a3\n",
+    "print(R+S == N)\n",
+    "print(hex(M * pow(S, N-2,N) % N))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\t87\n",
+      "0\t112\n",
+      "1\t40\n",
+      "1\t159\n",
+      "5\t27\n",
+      "5\t172\n",
+      "7\t56\n",
+      "7\t143\n",
+      "8\t11\n",
+      "8\t188\n",
+      "9\t61\n",
+      "9\t138\n",
+      "11\t12\n",
+      "11\t187\n",
+      "16\t83\n",
+      "16\t116\n",
+      "17\t12\n",
+      "17\t187\n",
+      "19\t10\n",
+      "19\t189\n",
+      "20\t68\n",
+      "20\t131\n",
+      "21\t78\n",
+      "21\t121\n",
+      "23\t45\n",
+      "23\t154\n",
+      "24\t10\n",
+      "24\t189\n",
+      "27\t63\n",
+      "27\t136\n",
+      "32\t61\n",
+      "32\t138\n",
+      "33\t70\n",
+      "33\t129\n",
+      "37\t78\n",
+      "37\t121\n",
+      "40\t39\n",
+      "40\t160\n",
+      "46\t80\n",
+      "46\t119\n",
+      "47\t56\n",
+      "47\t143\n",
+      "49\t68\n",
+      "49\t131\n",
+      "50\t45\n",
+      "50\t154\n",
+      "51\t70\n",
+      "51\t129\n",
+      "52\t11\n",
+      "52\t188\n",
+      "53\t80\n",
+      "53\t119\n",
+      "54\t96\n",
+      "54\t103\n",
+      "55\t60\n",
+      "55\t139\n",
+      "57\t54\n",
+      "57\t145\n",
+      "59\t60\n",
+      "59\t139\n",
+      "60\t93\n",
+      "60\t106\n",
+      "61\t39\n",
+      "61\t160\n",
+      "62\t27\n",
+      "62\t172\n",
+      "67\t9\n",
+      "67\t190\n",
+      "70\t54\n",
+      "70\t145\n",
+      "71\t64\n",
+      "71\t135\n",
+      "72\t54\n",
+      "72\t145\n",
+      "73\t24\n",
+      "73\t175\n",
+      "75\t20\n",
+      "75\t179\n",
+      "76\t63\n",
+      "76\t136\n",
+      "79\t83\n",
+      "79\t116\n",
+      "82\t44\n",
+      "82\t155\n",
+      "84\t41\n",
+      "84\t158\n",
+      "85\t60\n",
+      "85\t139\n",
+      "88\t74\n",
+      "88\t125\n",
+      "90\t95\n",
+      "90\t104\n",
+      "92\t40\n",
+      "92\t159\n",
+      "95\t17\n",
+      "95\t182\n",
+      "96\t63\n",
+      "96\t136\n",
+      "97\t71\n",
+      "97\t128\n",
+      "98\t39\n",
+      "98\t160\n",
+      "100\t80\n",
+      "100\t119\n",
+      "103\t5\n",
+      "103\t194\n",
+      "104\t83\n",
+      "104\t116\n",
+      "105\t7\n",
+      "105\t192\n",
+      "106\t40\n",
+      "106\t159\n",
+      "108\t7\n",
+      "108\t192\n",
+      "115\t70\n",
+      "115\t129\n",
+      "120\t17\n",
+      "120\t182\n",
+      "121\t95\n",
+      "121\t104\n",
+      "123\t5\n",
+      "123\t194\n",
+      "126\t45\n",
+      "126\t154\n",
+      "130\t68\n",
+      "130\t131\n",
+      "132\t27\n",
+      "132\t172\n",
+      "133\t71\n",
+      "133\t128\n",
+      "134\t20\n",
+      "134\t179\n",
+      "135\t44\n",
+      "135\t155\n",
+      "136\t74\n",
+      "136\t125\n",
+      "137\t9\n",
+      "137\t190\n",
+      "139\t11\n",
+      "139\t188\n",
+      "141\t78\n",
+      "141\t121\n",
+      "145\t56\n",
+      "145\t143\n",
+      "147\t93\n",
+      "147\t106\n",
+      "148\t41\n",
+      "148\t158\n",
+      "149\t24\n",
+      "149\t175\n",
+      "152\t96\n",
+      "152\t103\n",
+      "156\t10\n",
+      "156\t189\n",
+      "158\t61\n",
+      "158\t138\n",
+      "163\t64\n",
+      "163\t135\n",
+      "164\t64\n",
+      "164\t135\n",
+      "166\t41\n",
+      "166\t158\n",
+      "168\t71\n",
+      "168\t128\n",
+      "171\t12\n",
+      "171\t187\n",
+      "172\t5\n",
+      "172\t194\n",
+      "174\t74\n",
+      "174\t125\n",
+      "176\t24\n",
+      "176\t175\n",
+      "181\t44\n",
+      "181\t155\n",
+      "183\t17\n",
+      "183\t182\n",
+      "185\t7\n",
+      "185\t192\n",
+      "187\t95\n",
+      "187\t104\n",
+      "189\t20\n",
+      "189\t179\n",
+      "191\t93\n",
+      "191\t106\n",
+      "192\t96\n",
+      "192\t103\n",
+      "194\t9\n",
+      "194\t190\n"
+     ]
+    }
+   ],
+   "source": [
+    "from ecc import Point, FieldElement\n",
+    "\n",
+    "prime = 199\n",
+    "a = FieldElement(0, prime)\n",
+    "b = FieldElement(7, prime)\n",
+    "\n",
+    "for x_raw in range(prime):\n",
+    "    x = FieldElement(x_raw, prime)\n",
+    "    for y_raw in range(prime):\n",
+    "        y = FieldElement(y_raw, prime)\n",
+    "        if y**2 == x**3 + a*x + b:\n",
+    "            print(\"{}\\t{}\".format(x_raw, y_raw))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
